--- a/index.html
+++ b/index.html
@@ -5,30 +5,39 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>UI BASICS TYPOGRAPHY</title>
   </head>
   <body>
     <p>This text is Normal.</p>
-    <p><b>This text is bold(inline Text Semantics).</b></p>
-    <p class="bold">This text is Bold.</p>
+    <p class="bold">This text is bold(inline Text Semantics).</p>
+    <p><b>This text is Bold mit b</b></p>
 
     <p>This text is normal.</p>
-    <p><strong>This text is important!</strong></p>
+    <p class="strong">This text is important-class!</p>
+    <p><strong>This text is important! Bold mit Strong</strong></p>
     <p>This text is normal.</p>
+    <p><i>This text is italic!Italic aber mit i</i></p>
     <p><i>This text is italic.</i></p>
 
     <p>This text is normal.</p>
-    <p><em>This text is emphasized.</em></p>
+    <p><em>This text is emphasized(Italic mit em).</em></p>
+    <p><i>This Text is emphasized(Italic mit i).</i></p>
 
     <p>This is some normal text.</p>
     <p><small>This is some smaller text.</small></p>
+    <p><small>Dies Text ist Klein.</small></p>
 
     <p>Do not forget to buy <mark>milk</mark> today.</p>
+    <p>vergiss nicht bitte, heute <mark>Milch</mark> zu kaufen.</p>
     <p>My favorite color is <del>blue</del> red.</p>
 
     <p>My favorite color is <del>blue</del> <ins>red</ins>.</p>
+    Eigentlich ist meine lieblingsfarbe <del>red</del> <ins>Orange</ins>.
     <p>This is <sub>subscripted</sub> text.</p>
+    <p>Ich schreibe das Text als <sub>subscripted</sub>.</p>
 
-    <p>This is <sup>superscripted</sup>text.</p>
+    <p>This is <sup>superscripted</sup> text.</p>
+
+    <p>Ich schreibe das Text als <sup>superschripted</sup>.</p>
   </body>
 </html>
